<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_marginVertical="10dp">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:elevation="5dp"
        app:cardBackgroundColor="@color/brown_light"
        android:layout_margin="5dp"
        app:cardCornerRadius="10dp"
        >

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="15dp">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginBottom="10dp">
                <TextView
                    android:id="@+id/tv_number"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tools:text="#1"
                    android:textSize="28sp"
                    android:textStyle="bold"
                    android:textColor="@color/brown_dark"
                    />
                <TextView
                    android:id="@+id/tv_province_name"
                    android:layout_weight="1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tools:text="DKI Jakarta"
                    android:textSize="28sp"
                    android:textStyle="bold"
                    android:gravity="center"
                    android:textColor="@color/brown_dark"
                    />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tv_positive"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    tools:text="30245"
                    android:gravity="end"
                    android:textColor="@color/brown_dark"
                    android:textSize="26sp"
                    android:layout_marginRight="10dp"
                    />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/positive"
                    android:textColor="@color/brown_dark"
                    android:textSize="26sp"
                    android:layout_marginLeft="10dp"
                    />

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="@color/brown_dark"
                android:layout_margin="10dp"
                />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tv_recovered"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    tools:text="125934"
                    android:gravity="end"
                    android:textColor="@color/brown_dark"
                    android:textSize="26sp"
                    android:layout_marginRight="10dp"
                    />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/recovered"
                    android:textColor="@color/brown_dark"
                    android:textSize="26sp"
                    android:layout_marginLeft="10dp"
                    />

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="@color/brown_dark"
                android:layout_margin="10dp"
                />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tv_death"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    tools:text="6698"
                    android:gravity="end"
                    android:textColor="@color/brown_dark"
                    android:textSize="26sp"
                    android:layout_marginRight="10dp"
                    />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/death"
                    android:textColor="@color/brown_dark"
                    android:textSize="26sp"
                    android:layout_marginLeft="10dp"
                    />

            </LinearLayout>

        </LinearLayout>

    </androidx.cardview.widget.CardView>


</LinearLayout>